--- a/app/src/main/res/layout/card_recipe_list_full.xml
+++ b/app/src/main/res/layout/card_recipe_list_full.xml
@@ -2,10 +2,11 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recipe_card"
+    android:id="@+id/card_recipe_list_full"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="4dp"
+    app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="true">
 
     <android.support.constraint.ConstraintLayout
@@ -16,7 +17,7 @@
 
         <ImageView
             android:id="@+id/recipe_image"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/gray_300"
             android:contentDescription="@string/recipe_image_description"
