--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,9 +40,26 @@
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
     </style>
 
+    <style name="LabelButton" parent="Widget.AppCompat.Button.Small">
+        <item name="android:drawableLeft">@drawable/ic_labeled_button</item>
+        <item name="android:minHeight">24dp</item>
+        <item name="android:drawablePadding">16dp</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="android:gravity">left|center_vertical</item>
+    </style>
+
+
     <style name="AppTheme.RatingBarIndicator">
         <item name="colorControlNormal">@color/secondary_dark</item>
         <item name="colorControlActivated">@color/secondary</item>
+    </style>
+
+    <style name="BottomToolbarTheme" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="toolbarStyle">@style/BottomToolbarStyle</item>
+    </style>
+
+    <style name="BottomToolbarStyle" parent="Widget.AppCompat.Toolbar">
+        <item name="android:background">?android:attr/colorBackground</item>
     </style>
 
 </resources>
