--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,4 +7,15 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <style name="LabelButton" parent="Widget.AppCompat.Button.Small">
+        <item name="android:drawableLeft">@drawable/ic_labeled_accent</item>
+        <item name="android:drawableStart">@drawable/ic_labeled_accent</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:drawablePadding">16dp</item>
+        <item name="android:minHeight">24dp</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="android:gravity">left|center_vertical</item>
+    </style>
+
 </resources>
