--- a/app/src/main/res/drawable/ic_quantity.xml
+++ b/app/src/main/res/drawable/ic_quantity.xml
@@ -5,5 +5,5 @@
     android:viewportWidth="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M17,3L7,3c-1.1,0 -1.99,0.9 -1.99,2L5,21l7,-3 7,3L19,5c0,-1.1 -0.9,-2 -2,-2zM17,18l-5,-2.18L7,18L7,5h10v13z" />
+        android:pathData="M3,5v6h5L7,7l4,1L11,3L5,3c-1.1,0 -2,0.9 -2,2zM8,13L3,13v6c0,1.1 0.9,2 2,2h6v-5l-4,1 1,-4zM17,17l-4,-1v5h6c1.1,0 2,-0.9 2,-2v-6h-5l1,4zM19,3h-6v5l4,-1 -1,4h5L21,5c0,-1.1 -0.9,-2 -2,-2z" />
 </vector>
