--- a/app/src/main/res/layout/fragment_recipe_bottom_dialog.xml
+++ b/app/src/main/res/layout/fragment_recipe_bottom_dialog.xml
@@ -28,8 +28,8 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
-    <Button
-        android:id="@+id/label_button"
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/recipe_label_button"
         style="@style/LabelButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
         android:layout_marginTop="16dp"
         android:tint="@color/gray_800"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label_button"
+        app:layout_constraintTop_toBottomOf="@+id/recipe_label_button"
         app:srcCompat="@drawable/ic_recipe_category"
         tools:ignore="ContentDescription" />
 
