Add modal bottom sheet for recipe

--- a/app/src/main/res/layout/card_recipe.xml
+++ b/app/src/main/res/layout/card_recipe.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:id="@+id/card_recipe_image"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="180dp"
             android:scaleType="centerCrop"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
