--- a/app/src/main/res/layout/card_recipe_back.xml
+++ b/app/src/main/res/layout/card_recipe_back.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_recipe"
+    android:id="@+id/card_recipe_back_back"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="4dp"
@@ -10,47 +10,40 @@
     app:cardUseCompatPadding="true">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/card_recipe_content"
+        android:id="@+id/card_recipe_back_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/card_recipe_image"
+        <!-- Space with 16:9 aspect ratio for same front and back dimensions -->
+        <android.support.percent.PercentFrameLayout
+            android:id="@+id/card_recipe_back_space_container"
             android:layout_width="0dp"
-            android:layout_height="180dp"
-            android:scaleType="centerCrop"
+            android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bg_drawer_header"
-            tools:ignore="ContentDescription" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Space
+                android:id="@+id/card_recipe_back_image_space"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_aspectRatio="178%"
+                app:layout_widthPercent="100%" />
+        </android.support.percent.PercentFrameLayout>
 
         <TextView
-            android:id="@+id/card_recipe_title"
+            android:id="@+id/card_recipe_back_title_space"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:text="Recipe title"
+            android:text="Card recipe back"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_image"
-            tools:text="Recipe title" />
-
-        <TextView
-            android:id="@+id/card_recipe_subtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:text="Recipe subtitle"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_title" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_space_container" />
 
         <View
-            android:id="@+id/card_recipe_action_horizontal_divider"
+            android:id="@+id/card_recipe_back_action_horizontal_divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginEnd="8dp"
@@ -61,38 +54,38 @@
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_subtitle" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_title_space" />
 
         <ImageButton
-            android:id="@+id/card_recipe_expand_button"
+            android:id="@+id/card_recipe_back_expand_button"
             style="@style/LightIconButton"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:tint="@color/gray_400"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/card_recipe_action_vertical_divider"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_action_horizontal_divider"
+            app:layout_constraintRight_toLeftOf="@+id/card_recipe_back_action_vertical_divider"
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_action_horizontal_divider"
             app:srcCompat="@drawable/ic_chevron_down"
             tools:ignore="ContentDescription" />
 
         <View
-            android:id="@+id/card_recipe_action_vertical_divider"
+            android:id="@+id/card_recipe_back_action_vertical_divider"
             android:layout_width="1dp"
             android:layout_height="40dp"
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_action_horizontal_divider" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_action_horizontal_divider" />
 
         <ImageButton
-            android:id="@+id/card_recipe_open_button"
+            android:id="@+id/card_recipe_back_open_button"
             style="@style/LightIconButton"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:tint="@color/gray_400"
-            app:layout_constraintLeft_toRightOf="@+id/card_recipe_action_vertical_divider"
+            app:layout_constraintLeft_toRightOf="@+id/card_recipe_back_action_vertical_divider"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_action_horizontal_divider"
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_action_horizontal_divider"
             app:srcCompat="@drawable/ic_chevron_right"
             tools:ignore="ContentDescription" />
 
