--- a/app/src/main/res/animator/card_flip_left_out.xml
+++ b/app/src/main/res/animator/card_flip_left_out.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Rotate -->
+    <!-- Rotate. -->
     <objectAnimator
         android:duration="@integer/card_flip_full_time_ms"
         android:interpolator="@android:interpolator/accelerate_decelerate"
