--- a/app/src/main/res/layout/card_recipe_back.xml
+++ b/app/src/main/res/layout/card_recipe_back.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_recipe_back_back"
+    android:id="@+id/card_recipe_back"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="4dp"
@@ -35,6 +35,8 @@
             android:id="@+id/card_recipe_back_title_space"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:text="Card recipe back"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
