--- a/app/src/main/res/layout/card_recipe_front.xml
+++ b/app/src/main/res/layout/card_recipe_front.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_recipe"
+    android:id="@+id/card_recipe_front"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="4dp"
@@ -10,21 +10,21 @@
     app:cardUseCompatPadding="true">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/card_recipe_content"
+        android:id="@+id/card_recipe_front_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <!-- Image with 16:9 aspect ratio -->
         <android.support.percent.PercentFrameLayout
-            android:id="@+id/card_recipe_image_container"
-            android:layout_width="match_parent"
+            android:id="@+id/card_recipe_front_image_container"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/card_recipe_image"
+                android:id="@+id/card_recipe_front_image"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
@@ -35,7 +35,7 @@
         </android.support.percent.PercentFrameLayout>
 
         <TextView
-            android:id="@+id/card_recipe_title"
+            android:id="@+id/card_recipe_front_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -45,11 +45,11 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_image_container"
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_front_image_container"
             tools:text="Recipe title" />
 
         <View
-            android:id="@+id/card_recipe_action_horizontal_divider"
+            android:id="@+id/card_recipe_front_action_horizontal_divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginEnd="8dp"
@@ -60,38 +60,38 @@
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_title" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_front_title" />
 
         <ImageButton
-            android:id="@+id/card_recipe_expand_button"
+            android:id="@+id/card_recipe_front_expand_button"
             style="@style/LightIconButton"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:tint="@color/gray_400"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/card_recipe_action_vertical_divider"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_action_horizontal_divider"
+            app:layout_constraintRight_toLeftOf="@+id/card_recipe_front_action_vertical_divider"
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_front_action_horizontal_divider"
             app:srcCompat="@drawable/ic_chevron_down"
             tools:ignore="ContentDescription" />
 
         <View
-            android:id="@+id/card_recipe_action_vertical_divider"
+            android:id="@+id/card_recipe_front_action_vertical_divider"
             android:layout_width="1dp"
             android:layout_height="40dp"
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_action_horizontal_divider" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_front_action_horizontal_divider" />
 
         <ImageButton
-            android:id="@+id/card_recipe_open_button"
+            android:id="@+id/card_recipe_front_open_button"
             style="@style/LightIconButton"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:tint="@color/gray_400"
-            app:layout_constraintLeft_toRightOf="@+id/card_recipe_action_vertical_divider"
+            app:layout_constraintLeft_toRightOf="@+id/card_recipe_front_action_vertical_divider"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_action_horizontal_divider"
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_front_action_horizontal_divider"
             app:srcCompat="@drawable/ic_chevron_right"
             tools:ignore="ContentDescription" />
 
