--- a/app/src/main/res/animator/card_flip_right_in.xml
+++ b/app/src/main/res/animator/card_flip_right_in.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Before rotating, immediately set the alpha to 0. -->
+    <!-- Before rotating, immediately set the alpha to 0 -->
     <objectAnimator
         android:duration="0"
         android:propertyName="alpha"
         android:valueFrom="1.0"
         android:valueTo="0.0" />
 
-    <!-- Rotate -->
+    <!-- and visibility to View.VISIBLE. -->
+    <objectAnimator
+        android:duration="0"
+        android:propertyName="visibility"
+        android:valueFrom="0x00000008"
+        android:valueTo="0x00000000"
+        android:valueType="intType" />
+
+    <!-- Rotate. -->
     <objectAnimator
         android:duration="@integer/card_flip_full_time_ms"
         android:interpolator="@android:interpolator/accelerate_decelerate"
