--- a/app/src/main/res/layout/card_recipe.xml
+++ b/app/src/main/res/layout/card_recipe.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/card_recipe_flip"
+    android:id="@+id/card_recipe"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
