--- a/app/src/main/res/layout/card_recipe_back.xml
+++ b/app/src/main/res/layout/card_recipe_back.xml
@@ -14,9 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!-- Space with 16:9 aspect ratio for same front and back dimensions -->
+        <!-- Space with 16:9 aspect ratio for same layout params as in front layout -->
         <android.support.percent.PercentFrameLayout
-            android:id="@+id/card_recipe_back_space_container"
+            android:id="@+id/card_recipe_back_space_image_container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -24,25 +24,26 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <Space
-                android:id="@+id/card_recipe_back_image_space"
+                android:id="@+id/card_recipe_back_space"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:scaleType="centerCrop"
                 app:layout_aspectRatio="178%"
                 app:layout_widthPercent="100%" />
         </android.support.percent.PercentFrameLayout>
 
         <TextView
-            android:id="@+id/card_recipe_back_title_space"
+            android:id="@+id/card_recipe_back_space_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:text="Card recipe back"
+            android:alpha="0"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_space_container" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_space_image_container" />
 
         <View
             android:id="@+id/card_recipe_back_action_horizontal_divider"
@@ -56,14 +57,13 @@
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_title_space" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_space_text" />
 
         <ImageButton
             android:id="@+id/card_recipe_back_expand_button"
             style="@style/LightIconButton"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:tint="@color/gray_400"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/card_recipe_back_action_vertical_divider"
             app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_action_horizontal_divider"
@@ -84,7 +84,6 @@
             style="@style/LightIconButton"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:tint="@color/gray_400"
             app:layout_constraintLeft_toRightOf="@+id/card_recipe_back_action_vertical_divider"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_action_horizontal_divider"
