--- a/app/src/main/res/layout/card_recipe.xml
+++ b/app/src/main/res/layout/card_recipe.xml
@@ -1,11 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_recipe"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <include layout="@layout/card_recipe_back" />
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_recipe_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="4dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
 
-    <include layout="@layout/card_recipe_front" />
+        <include layout="@layout/card_recipe_back_content" />
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_recipe_front"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="4dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
+
+        <include layout="@layout/card_recipe_front_content" />
+
+    </android.support.v7.widget.CardView>
 
 </FrameLayout>
