--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="colorAccent">?android:attr/textColorPrimary</item>
     </style>
 
-    <style name="LightIconButton" parent="@style/Widget.AppCompat.ImageButton">
+    <style name="LightIconButton" parent="@style/Widget.AppCompat.Button.Borderless">
         <item name="android:tint">@color/gray_400</item>
         <item name="android:background">@drawable/bg_light_icon_button</item>
     </style>
