--- a/app/src/main/res/layout/card_recipe_back_content.xml
+++ b/app/src/main/res/layout/card_recipe_back_content.xml
@@ -4,20 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_recipe_back_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:background="@color/gray_400">
+    android:layout_height="wrap_content">
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_recipe_back_account_image_circle_card"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:cardCornerRadius="40dp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/card_recipe_back_button_horizontal_divider"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/card_recipe_back_account_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/bg_drawer_header"
+            tools:ignore="ContentDescription" />
+
+    </android.support.v7.widget.CardView>
 
     <!-- Bottom buttons -->
     <View
-        android:id="@+id/card_recipe_back_action_horizontal_divider"
+        android:id="@+id/card_recipe_back_button_horizontal_divider"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
         android:background="@color/gray_100"
         app:layout_constraintBottom_toTopOf="@+id/card_recipe_back_expand_button"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -30,18 +52,18 @@
         android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/card_recipe_back_action_vertical_divider"
+        app:layout_constraintRight_toLeftOf="@+id/card_recipe_back_button_vertical_divider"
         app:srcCompat="@drawable/ic_chevron_down"
         tools:ignore="ContentDescription" />
 
     <View
-        android:id="@+id/card_recipe_back_action_vertical_divider"
+        android:id="@+id/card_recipe_back_button_vertical_divider"
         android:layout_width="1dp"
         android:layout_height="40dp"
         android:background="@color/gray_100"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_button_horizontal_divider" />
 
     <ImageButton
         android:id="@+id/card_recipe_back_open_button"
@@ -49,7 +71,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/card_recipe_back_action_vertical_divider"
+        app:layout_constraintLeft_toRightOf="@+id/card_recipe_back_button_vertical_divider"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/ic_chevron_right"
         tools:ignore="ContentDescription" />
