--- a/app/src/main/res/layout/card_recipe.xml
+++ b/app/src/main/res/layout/card_recipe.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_recipe"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -8,24 +9,25 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_recipe_back"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:cardElevation="4dp"
         app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        tools:visibility="invisible">
 
-        <include layout="@layout/card_recipe_back_content" />
+        <include layout="@layout/card_recipe_content_back" />
 
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_recipe_front"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:cardElevation="4dp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true">
 
-        <include layout="@layout/card_recipe_front_content" />
+        <include layout="@layout/card_recipe_content_front" />
 
     </android.support.v7.widget.CardView>
 
