--- a/app/src/main/res/layout/fragment_recipe_bottom_dialog.xml
+++ b/app/src/main/res/layout/fragment_recipe_bottom_dialog.xml
@@ -39,7 +39,7 @@
         android:text="Some label of recipe"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recipe_bottom_toolbar"
-        tools:drawableLeft="@drawable/ic_labeled_accent" />
+        tools:drawableLeft="@drawable/ic_labeled" />
 
     <ImageView
         android:id="@+id/recipe_category_icon"
