--- a/app/src/main/res/layout/card_recipe_content_front.xml
+++ b/app/src/main/res/layout/card_recipe_content_front.xml
@@ -49,8 +49,8 @@
     <include
         android:id="@+id/card_recipe_front_buttons"
         layout="@layout/card_recipe_buttons"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
