--- a/app/src/main/res/layout/card_recipe.xml
+++ b/app/src/main/res/layout/card_recipe.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_recipe"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -12,8 +11,7 @@
         android:layout_height="match_parent"
         app:cardElevation="4dp"
         app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true"
-        tools:visibility="invisible">
+        app:cardUseCompatPadding="true">
 
         <include layout="@layout/card_recipe_content_back" />
 
