--- a/app/src/main/res/layout/card_recipe_content_back.xml
+++ b/app/src/main/res/layout/card_recipe_content_back.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_recipe_content_back"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="220dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/image_container"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:cardCornerRadius="40dp"
+        app:cardCornerRadius="32dp"
         app:cardElevation="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -34,21 +34,20 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="56dp"
+        app:layout_constraintGuide_begin="48dp"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="56dp" />
+        tools:layout_editor_absoluteY="48dp" />
 
     <TextView
         android:id="@+id/account_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:maxLines="1"
         android:text="Account name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="18sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toTopOf="@+id/account_image_guideline"
         app:layout_constraintLeft_toRightOf="@+id/image_container"
         tools:text="Account name" />
@@ -57,7 +56,7 @@
         android:id="@+id/recipe_creation_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="Creation date"
         app:layout_constraintLeft_toLeftOf="@+id/account_title"
         app:layout_constraintTop_toTopOf="@+id/account_image_guideline"
@@ -80,13 +79,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_container"
-        tools:text="Recipe title" />
+        tools:text="Recipe title at two lines Recipe title at two lines Recipe title at two lines" />
 
     <include
-        android:id="@+id/card_recipe_back_buttons"
         layout="@layout/card_recipe_buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
