--- a/app/src/main/res/layout/card_recipe_content_front.xml
+++ b/app/src/main/res/layout/card_recipe_content_front.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_recipe_content_front"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="200dp"
+    android:background="@color/primary">
 
-    <!-- Image with 16:9 aspect ratio -->
+    <!--Image with 16:9 aspect ratio-->
     <android.support.percent.PercentFrameLayout
         android:id="@+id/image_container"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -50,7 +51,7 @@
         android:id="@+id/card_recipe_front_buttons"
         layout="@layout/card_recipe_buttons"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
