--- a/app/src/main/res/layout/card_recipe.xml
+++ b/app/src/main/res/layout/card_recipe.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <include
-        layout="@layout/card_recipe_back"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:visibility="invisible" />
+    <!--<include-->
+    <!--layout="@layout/card_recipe_back"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--tools:visibility="invisible" />-->
 
     <include
         layout="@layout/card_recipe_front"
