Add circle image view library

--- a/app/src/main/res/layout/card_recipe_front.xml
+++ b/app/src/main/res/layout/card_recipe_front.xml
@@ -62,7 +62,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="@dimen/card_recipe_buttons_margin_top"
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
