--- a/app/src/main/res/layout/card_recipe_back.xml
+++ b/app/src/main/res/layout/card_recipe_back.xml
@@ -14,62 +14,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_recipe_back_account_image_container"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/card_recipe_back_account_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            app:cardCornerRadius="24dp"
-            app:cardElevation="0dp"
-            app:cardMaxElevation="0dp"
-            app:cardPreventCornerOverlap="false"
-            app:cardUseCompatPadding="true"
+            android:src="@drawable/bg_drawer_header"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/card_recipe_back_account_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/bg_drawer_header"
-                tools:ignore="ContentDescription" />
-
-        </android.support.v7.widget.CardView>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.constraint.Guideline
             android:id="@+id/card_recipe_back_account_image_guideline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="40dp"
+            app:layout_constraintGuide_begin="36dp"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="40dp" />
+            tools:layout_editor_absoluteY="36dp" />
 
         <TextView
             android:id="@+id/card_recipe_back_account_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:maxLines="1"
             android:text="Account name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintBottom_toTopOf="@+id/card_recipe_back_account_image_guideline"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/card_recipe_back_account_image_container"
+            app:layout_constraintLeft_toRightOf="@+id/card_recipe_back_account_image"
             app:layout_constraintRight_toRightOf="parent"
             tools:text="Account name" />
 
         <TextView
             android:id="@+id/card_recipe_back_recipe_creation_date"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
@@ -83,7 +68,7 @@
 
         <TextView
             android:id="@+id/card_recipe_back_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="16dp"
@@ -96,7 +81,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_account_image_container"
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_account_image"
             tools:text="Recipe title" />
 
         <!--Space with 16:9 aspect ratio for correct back and front card height-->
@@ -124,7 +109,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="@dimen/card_recipe_buttons_margin_top"
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
