--- a/app/src/main/res/layout/activity_drawer_tab.xml
+++ b/app/src/main/res/layout/activity_drawer_tab.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.DrawerTabActivity"
+    tools:context=".ui.activity.DrawerTabActivity"
     tools:openDrawer="start">
 
     <android.support.design.widget.CoordinatorLayout
@@ -61,7 +61,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/drawer_navigation" />
+        app:headerLayout="@layout/drawer_base_header"
+        app:menu="@menu/drawer_base_nav" />
 
 </android.support.v4.widget.DrawerLayout>
