--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="card_layout_span_v">2</integer>
-    // Vertical, Portrait orientation
-    <integer name="card_layout_span_h">3</integer>
-    // Horizontal, Landscape orientation
+    <integer name="recipe_list_span">2</integer>
     <integer name="flip_full_time_ms">500</integer>
     <integer name="flip_half_time_ms">250</integer>
 </resources>
