--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
     <dimen name="card_recipe_buttons_margin_top">68dp</dimen>
+    <dimen name="activity_recipe_detail_appbar_height">180dp</dimen>
 </resources>
