--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -26,6 +26,7 @@
                 android:id="@+id/activity_recipe_detail_toolbar_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
@@ -57,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:tint="@color/white"
+        app:fabSize="mini"
         app:layout_anchor="@id/activity_recipe_detail_appbar"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_photo" />
@@ -73,6 +75,7 @@
         android:layout_marginTop="16dp"
         android:tint="@color/white"
         app:backgroundTint="?attr/colorPrimary"
+        app:fabSize="mini"
         app:layout_anchor="@id/activity_recipe_detail_appbar"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_cart" />
