--- a/app/src/main/res/layout/bottom_recipe_detail.xml
+++ b/app/src/main/res/layout/bottom_recipe_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_recipe_detail_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,41 +10,59 @@
     app:behavior_peekHeight="@dimen/bottom_recipe_detail_peek_height"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottom_recipe_detail_peek_height"
-        android:background="@drawable/bg_bottom_peak"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:background="@drawable/bg_bottom_peak">
 
         <TextView
             android:id="@+id/bottom_recipe_detail_weight_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.4"
+            android:layout_marginEnd="48dp"
+            android:layout_marginRight="48dp"
             android:gravity="end"
             android:text="Weight"
-            android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/bottom_recipe_detail_weight_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.2"
             android:gravity="center"
             android:text="100"
-            android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/bottom_recipe_detail_weight_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.4"
+            android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp"
             android:gravity="start"
             android:text="gram"
-            android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5"
+            tools:layout_editor_absoluteX="192dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
